@@ -13,15 +13,20 @@ Read below for how to get support or keep up to date.
 
 DOCUMENTATION READING ORDER
 
-If you want to read all the Muldis::DB documentation that exists now in
+If you want to read all the Muldis D documentation that exists now in
 this distribution, I recommend doing so in this order:
 
    1.       README
    2. (opt) Changes
    3.       lib/Language/MuldisD.pm
    4.       lib/Language/MuldisD/Basics.pod
-   5.       lib/Language/MuldisD/SeeAlso.pod
-   6. (opt) TODO
+   5.       lib/Language/MuldisD/Core.pod
+   6. (opt) lib/Language/MuldisD/Grammar.pod
+   7.       lib/Language/MuldisD/PerlHosted.pod
+   8. (opt) lib/Language/MuldisD/Ext/Temporal.pod
+   9. (opt) lib/Language/MuldisD/Ext/Spatial.pod
+  10.       lib/Language/MuldisD/SeeAlso.pod
+  11. (opt) TODO
 
 Then you can carry on with anything else.
 
