@@ -31,22 +31,72 @@ Formal spec of Muldis D relational DBMS lang
 
 This document is Language::MuldisD version 0.4.0.
 
+=head1 PREFACE
+
+This is the root document of the Muldis D language specification; the
+documents that comprise the remaining parts of the specification, in their
+suggested reading order (but that all follow the root), are:
+L<Language::MuldisD::Basics>, L<Language::MuldisD::Core>,
+L<Language::MuldisD::Grammar>, L<Language::MuldisD::PerlHosted>,
+L<Language::MuldisD::Ext::Temporal>, L<Language::MuldisD::Ext::Spatial>.
+
 =head1 DESCRIPTION
 
-This distribution is the formal specification of the Muldis D language.
+This distribution / multi-part document is the human readable authoritative
+formal specification of the B<Muldis D> language, and of the virtual
+environment in which it executes.  If there's a conflict between any other
+document and this one, then either the other document is in error, or the
+developers were negligent in updating it before this one, so you can yell
+at them.
 
-I<This documentation is pending.>
+Muldis D is a computationally / Turing complete (and industrial strength)
+high-level programming language with fully integrated database
+functionality; you can use it to define, query, and update relational
+databases.  The language's paradigm is a mixture of declarative,
+functional, imperative, and object-oriented.  It is primarily focused on
+providing reliability, consistency, portability, and ease of use and
+extension.  (Logically, speed of execution can not be declared as a Muldis
+D quality because such a quality belongs to an implementation alone;
+however, the language should lend itself to making fast implementations.)
 
-For one manner of introduction to it, see the included
-L<Language::MuldisD::Basics> file, which has the start of the
-specification itself.
+Muldis D is intended to qualify as a "B<D>" language as defined by
+"I<Databases, Types, and The Relational Model: The Third Manifesto>"
+(I<TTM>), a formal proposal for a solid foundation for data and database
+management systems, written by Christopher J. Date and Hugh Darwen; see
+L<http://www.aw-bc.com/catalog/academic/product/0,1144,0321399420,00.html>
+for a publishers link to the book that formally publishes I<TTM>.  See
+L<http://www.thethirdmanifesto.com/> for some references to what I<TTM> is,
+and also copies of some documents that were used in writing Muldis D.
 
-For another manner of introduction, see the separately distributed
-L<Muldis::DB> file, which is the first main implementation of Muldis D.
+It should be noted that Muldis D, being quite new, may omit some features
+that are mandatory for a "B<D>" language initially, to speed the way to a
+useable partial solution, but any omissions will be corrected later.  Also,
+it contains some features that go beyond the scope of a "B<D>" language, so
+Muldis D is technically a "B<D> plus extra"; examples of this are
+constructs for creating the databases themselves and managing connections
+to them.
+
+Muldis D also incorporates design aspects and constructs that are taken
+from or influenced by Perl 6, other general-purpose languages (particularly
+functional ones like Haskell), B<Tutorial D>, various B<D> implementations,
+and various SQL implementations (see the L<Language::MuldisD::SeeAlso>
+file).  I<It has also been suggested that some of the Muldis D design is
+like that of the Ada language, which I didn't really know anything about
+before writing it; this bears further investigation.  Moreover, it has also
+been suggested by a different person that the Lua language design is very
+similar, in different ways, and from a glance, it certainly seems to be
+so.>
+
+In any event, the Muldis D documentation will be focusing mainly on how
+Muldis D itself works, and will spend little time in providing rationale;
+you can read the aforementioned external documentation for much of that.
+
+Continue reading the language spec in L<Language::MuldisD::Basics>.
+
+Also look at the separately distributed L<Muldis::DB>, which is the first
+main implementation of Muldis D.
 
 =head1 SEE ALSO
-
-I<This documentation is pending.>
 
 Go to the L<Language::MuldisD::SeeAlso> file for the majority of external
 references.
@@ -86,24 +136,25 @@ None yet.
 =head1 FORUMS
 
 Several public email-based forums exist whose main topic is all
-implementations of the Muldis D language, especially the L<Muldis::DB>
-project, which they are named for.  All of these you can reach via
-L<http://mm.DarrenDuncan.net/mailman/listinfo>; go there to manage your
-subscriptions to, or view the archives of, the following:
+implementations of the L<Muldis D|Language::MuldisD> language, especially
+the L<Muldis DB|Muldis::DB> project, which they are named for.  All of
+these you can reach via L<http://mm.DarrenDuncan.net/mailman/listinfo>; go
+there to manage your subscriptions to, or view the archives of, the
+following:
 
 =over
 
 =item C<muldis-db-announce@mm.DarrenDuncan.net>
 
-This low-volume list is mainly for official announcements from the
-Muldis::DB developers, though developers of Muldis::DB extensions can also
-post their announcements here.  This is not a discussion list.
+This low-volume list is mainly for official announcements from the Muldis
+DB developers, though developers of Muldis DB extensions can also post
+their announcements here.  This is not a discussion list.
 
 =item C<muldis-db-users@mm.DarrenDuncan.net>
 
-This list is for general discussion among people who are using Muldis::DB,
-which is not concerned with the implementation of Muldis::DB itself.  This
-is the best place to ask for basic help in getting Muldis::DB installed on
+This list is for general discussion among people who are using Muldis DB,
+which is not concerned with the implementation of Muldis DB itself.  This
+is the best place to ask for basic help in getting Muldis DB installed on
 your machine or to make it do what you want.  You could also submit feature
 requests or report perceived bugs here, if you don't want to use CPAN's RT
 system.
@@ -111,18 +162,18 @@ system.
 =item C<muldis-db-devel@mm.DarrenDuncan.net>
 
 This list is for discussion among people who are designing or implementing
-the Muldis::DB core API (including Muldis D language design), or who are
-implementing Muldis::DB Engines, or who are writing core documentation,
+the Muldis DB core API (including Muldis D language design), or who are
+implementing Muldis DB Engines, or who are writing core documentation,
 tests, or examples.  It is not the place for non-implementers to get help
 in using said.
 
 =back
 
-An official IRC channel for Muldis::DB is also intended, but not yet
+An official IRC channel for Muldis DB is also intended, but not yet
 started.
 
 Alternately, you can purchase more advanced commercial support for various
-Muldis D implementations, particularly Muldis::DB, from its author; contact
+Muldis D implementations, particularly Muldis DB, from its author; contact
 C<perl@DarrenDuncan.net> for details.
 
 =cut
