@@ -5,7 +5,7 @@
 =head1 NAME
 
 Language::MuldisD::Basics -
-Design document of the Muldis D language
+10,000 Mile View of Muldis D
 
 =head1 VERSION
 
@@ -13,56 +13,15 @@ This document is Language::MuldisD::Basics version 0.6.0.
 
 =head1 PREFACE
 
-This is the root document of the Muldis D language specification; the
-documents that comprise the remaining parts of the specification, in their
-suggested reading order (but that all follow the root), are:
-L<Language::MuldisD::Core>, L<Language::MuldisD::Grammar>,
-L<Language::MuldisD::PerlHosted>, L<Language::MuldisD::Ext::Temporal>,
-L<Language::MuldisD::Ext::Spatial>.
+This document is part of the Muldis D language specification, whose root
+document is L<Language::MuldisD>; you should read that root document
+before you read this one, which provides subservient details.
 
 =head1 DESCRIPTION
 
-The native command language of a L<Muldis::DB> DBMS (database management
-system) / virtual machine is called B<Muldis D>; this document,
-Language::MuldisD::Basics, is the human readable authoritative
-design document for that language, and for the Muldis D virtual machine
-in which it executes.  If there's a conflict between any other document and
-this one, then either the other document is in error, or the developers
-were negligent in updating it before Language, so you can yell at them.
-
-Muldis D is intended to qualify as a "B<D>" language as defined by
-"I<Databases, Types, and The Relational Model: The Third Manifesto>"
-(I<TTM>), a formal proposal for a solid foundation for data and database
-management systems, written by Christopher J. Date and Hugh Darwen; see
-L<http://www.aw-bc.com/catalog/academic/product/0,1144,0321399420,00.html>
-for a publishers link to the book that formally publishes I<TTM>.  See
-L<http://www.thethirdmanifesto.com/> for some references to what I<TTM> is,
-and also copies of some documents that were used in writing Muldis D.
-
-It should be noted that Muldis D, being quite new, may omit some features
-that are mandatory for a "B<D>" language initially, to speed the way to a
-useable partial solution, but any omissions will be corrected later.  Also,
-it contains some features that go beyond the scope of a "B<D>" language, so
-Muldis D is technically a "B<D> plus extra"; examples of this are
-constructs for creating the databases themselves and managing connections
-to them.
-
-Muldis D also incorporates design aspects and constructs that are taken
-from or influenced by Perl 6, other general-purpose languages (particularly
-functional ones like Haskell), B<Tutorial D>, various B<D> implementations,
-and various SQL implementations (see the L<Language::MuldisD::SeeAlso>
-file).  I<It has also been suggested that some of the Muldis D design is
-like that of the Ada language, which I didn't really know anything about
-before writing it; this bears further investigation.  Moreover, it has also
-been suggested by a different person that the Lua language design is very
-similar, in different ways, and from a glance, it certainly seems to be
-so.>
-
-In any event, the Muldis D documentation will be focusing mainly on how
-Muldis D itself works, and will spend little time in providing rationale;
-you can read the aforementioned external documentation for much of that.
-
-I<This documentation is pending.>
+This document provides a 10,000 mile view of the Muldis D language.  It
+provides the basics of how the language is designed and works, as a
+foundation upon which to understand the other parts of the language spec.
 
 =head1 NOTES ON TERMINOLOGY
 
@@ -406,11 +365,11 @@ Muldis D is a computationally / Turing complete (and industrial strength)
 high-level programming language with fully integrated database
 functionality; you can use it to define, query, and update relational
 databases.  The language's paradigm is a mixture of declarative,
-imperative, functional, and object-oriented.  It is primarily focused on
+functional, imperative, and object-oriented.  It is primarily focused on
 providing reliability, consistency, portability, and ease of use and
 extension.  (Logically, speed of execution can not be declared as a Muldis
 D quality because such a quality belongs to an implementation alone;
-however, the language should lend itself to making fast ones.)
+however, the language should lend itself to making fast implementations.)
 
 The language is rigorously defined and requires users to be explicit, which
 leaves little room for ambiguity and related bugs.  When something is
@@ -462,25 +421,27 @@ compiled using a separate process into its own executable (or library),
 which includes situations where Muldis D is its own Parrot
 (L<http://www.parrotcode.org/>) hosted language (a prospect which is
 desired to be implemented in the near future).  Concrete Muldis D would
-also be used by an interactive shell interface over Muldis::DB::Interface,
-when users submit commands at runtime, or in any other situation where it
-makes sense to take input in that form.
+also be used by an interactive shell interface over the Muldis DB
+(specifically L<Muldis::DB::Interface>) implementation of Muldis D, when
+users submit commands at runtime, or in any other situation where it makes
+sense to take input in that form.
 
 Abstract Muldis D is the natural form that one would code in if they were
 primarily writing their application in a separate host language, such as
 Perl, and any Muldis D code was being specified in terms of host language
-code, such as Perl objects of Muldis::DB::Literal classes.  Abstract Muldis
-D code consists of quasi-hierarchical but actually relational collection
-values, typically catalog tuples.  Abstract Muldis D is the only
-representation format used by the API of L<Muldis::DB::Interface> itself,
-and is what any Perl code typically should be using.  When generating
-Muldis D code from arbitrary Perl data structures (which includes the work
-of, eg, SQL DBMS emulators), the Abstract form is the easiest to use and
-the least error prone since no values have to be escaped or stitched
-together as strings, which prevents many injection security holes.
-Abstract Muldis D is also what is used when Muldis D code is defined to
-generate/prepare and execute other Muldis D code at runtime (by reading or
-updating the meta-model / system catalog), which is "data definition".
+code, such as Perl arrays, hashes, and scalars.  Abstract Muldis D code
+consists of quasi-hierarchical but actually relational collection values,
+typically catalog tuples.  Abstract Muldis D is the only representation
+format used by the API the Muldis DB (specifically
+L<Muldis::DB::Interface>) implementation of Muldis D, and is what any Perl
+code typically should be using.  When generating Muldis D code from
+arbitrary Perl data structures (which includes the work of, eg, SQL DBMS
+emulators), the Abstract form is the easiest to use and the least error
+prone since no values have to be escaped or stitched together as strings,
+which prevents many injection security holes. Abstract Muldis D is also
+what is used when Muldis D code is defined to generate/prepare and execute
+other Muldis D code at runtime (by reading or updating the meta-model /
+system catalog), which is "data definition".
 
 See L<Language::MuldisD::Core> first for details of the Muldis D
 meta-model, which is also the grammar of Abstract Muldis D; see
