@@ -6,9 +6,18 @@
     * Language::MuldisD version 0.8.0 is released on CPAN as
     Language-MuldisD-0.8.0.tar.gz.
 
-    * New file versions are: Core.pod 0.8.0 and Basics.pod 0.6.1 and
-    Temporal.pod and Spatial.pod 0.5.1 and PerlHosted.pod 0.3.0.  The other
-    pre-existing versioned files are unchanged.
+    * New file versions are: Core.pod 0.8.0 and Basics.pod 0.7.0 and
+    Temporal.pod and Spatial.pod 0.5.1 and MuldisD.pm 0.5.0 and
+    PerlHosted.pod 0.3.0.  The other pre-existing versioned files are
+    unchanged.
+
+    * (MuldisD.pm, Basics.pod)  Updates to various main/introductory
+    documentation.  Changed the NAME of Basics.pod to "10,000 Mile View of
+    Muldis D" from "Design document of the Muldis D language" as it isn't
+    the intro file anymore (MuldisD.pm is instead).  Moved the large
+    PREFACE and DESCRIPTION sections from Basics.pod to MuldisD.pm, then
+    did a small amount of editing to them; Basics.pod then gained small
+    replacements.  Further minor edits to other sections.
 
     * (Core.pod, PerlHosted.pod, Temporal.pod, Spatial.pod)  More
     system-defined package consolidation: Empty merged into Universal;
